# godot_wry

./: .gitignore  README.md  justfile
.github/workflows/: build.yml  docs.yml
android/: build.gradle  settings.gradle
android/plugin/: build.gradle  consumer-rules.pro
android/plugin/src/main/: AndroidManifest.xml
android/plugin/src/main/kotlin/org/godotwry/plugin/: GodotWryPlugin.kt  Ipc.kt  Logger.kt  PermissionHelper.kt  RustWebChromeClient.kt  RustWebView.kt  RustWebViewClient.kt  WryActivity.kt
assets/: Info.ios.plist  Info.plist
docs/.vitepress/: config.mts
docs/reference/: webview.md
godot/: project.godot
godot/addons/godot_wry/: WRY.gdextension  WRY.gdextension.uid  godot_wry_export_plugin.gd  godot_wry_plugin.gd  plugin.cfg
godot/addons/godot_wry/examples/character_creator_ui_demo/: character_creator.gd.uid
godot/addons/godot_wry/icons/: webview.svg.import
rust/: Cargo.toml  build.rs
rust/src/: godot_window.rs  lib.rs  macros.rs  protocols.rs
scripts/: sign_macos_local.sh
